Update Azure deployment workflow trigger
Change trigger from push to workflow_dispatch for manual deployment.

--- a/.github/workflows/azure-deploy.yml
+++ b/.github/workflows/azure-deploy.yml
@@ -1,8 +1,7 @@
 name: Deploy Resource to Azure
 on:
-  push:
-
-
+  workflow_dispatch:
+  
 permissions:
   id-token: write # Required for requesting the JWT
   contents: read  # Required for actions/checkout
