Update resource group name in Azure deploy script

--- a/.github/workflows/azure-deploy.yml
+++ b/.github/workflows/azure-deploy.yml
@@ -27,6 +27,6 @@ jobs:
             # Replace 'my-resource-group' with your actual RG name
             az storage account create \
               --name "uniquestorage$(date +%s)" \
-              --resource-group "my-resource-group" \
+              --resource-group "N278-EIS-AROKIASW-RG1" \
               --location "eastus" \
               --sku Standard_LRS
