Add owner_name input to Azure deploy workflow
Add input parameter for owner name in Azure deploy workflow

--- a/.github/workflows/azure-deploy.yml
+++ b/.github/workflows/azure-deploy.yml
@@ -1,7 +1,11 @@
 name: Deploy Resource to Azure
 on:
   workflow_dispatch:
-  
+    inputs:
+      owner_name:
+        description: 'Who is the creator of this resource?'
+        required: true
+        
 permissions:
   id-token: write # Required for requesting the JWT
   contents: read  # Required for actions/checkout
